@@ -1,10 +1,12 @@
 2015-07-09 Martin Grønholdt
 
+* rest/network.c: Adjusted for new http_process_response behaviour.
 * rest/net-names.c: Added rest_net_names_context.
 *				  : Adjusted for new http_process_response behaviour.
 *				   (rest_net_names_get_handler): Uses context struct.
 *				   (rest_net_names_head_handler): Uses context and only replies with a real answer.
 *				   (create_response): Uses context and create a response when done scanning.
+* rest/net-passwd.c: Adjusted for new http_process_response behaviour.
 * slighttp/http-response.c (http_process_response): Keep processing if there is no response yet.
 * 						   (http_send_status_line): Return size of data sent.
 *						   (http_send_header): Return the size of the data sent.
